# tpastar-cpp

./: .gitignore  CMakeLists.txt  README.md
BasicGeometryLibrary/: CMakeLists.txt
BasicGeometryLibrary/include/: Vector.h
BasicGeometryLibrary/src/: Vector.cpp
Geometry/: CMakeLists.txt
Geometry/include/: Edge.h  Triangle.h  TriangleGraph.h  TriangleSkeleton.h  Vector.h
Geometry/src/: Edge.cpp  Triangle.cpp  TriangleGraph.cpp  TriangleSkeleton.cpp  Vector.cpp
Geometry/test/: EdgeTests.cpp  Init.cpp  TriangleGraphTest.cpp  TriangleSkeletonTests.cpp  TriangleTests.cpp  VectorTest.cpp
